RC model input form

--- a/frontend/src/style/app.css
+++ b/frontend/src/style/app.css
@@ -56,7 +56,7 @@ a[href]:hover {
   padding: 24px;
 }
 .model-header {
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-bottom: 0.5rem;
 }
 .model-name {
@@ -64,7 +64,7 @@ a[href]:hover {
   margin-bottom: 0.5rem;
 }
 .model-options {
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-left: 0px;
   margin-bottom: 0px !important;
 }
@@ -89,4 +89,11 @@ a[href]:hover {
 }
 hr {
   margin: 0 0 0 0;
+}
+.app-color {
+  border-color: #1a4cae !important;
+  background-color: #1a4cae !important;
+}
+.run-model {
+  margin-top: 3rem;
 }
